<resources>
    <string name="app_name">NZTA_Booking_App</string>
    <string name="normal_register">Don\'t have a road user account?<u> <b>Register</b></u></string>
    <string name="instructor_register">Don\'t have an instructor account?<u> <b>Register</b></u></string>
    <string name="img_desc">Nzta coloured logo</string>
    <string name="normal_login_txt">LOGIN AS ROAD USER</string>
    <string name="email_lbl">EMAIL:</string>
    <string name="pass_lbl">PASSWORD:</string>
    <string name="login_btn">Login</string>
    <string name="cancel_btn">Cancel</string>
    <string name="instructor_txt">INSTRUCTOR</string>
    <string name="register_txt">REGISTER</string>
    <string name="normal_txt">ROAD USER</string>
    <string name="instructor_login_txt">LOGIN AS INSTRUCTOR</string>
    <string name="normal_registration_txt">ROAD USER REGISTRATION</string>
    <string name="fn">FIRST NAME:</string>
    <string name="ln">LAST NAME:</string>
    <string name="confirm_pass_lbl">CONFIRM PASSWORD:</string>
    <string name="dl">LICENCE NUMBER:</string>
    <string name="instructor_registration">INSTRUCTOR REGISTRATION</string>
    <string name="get_started">Get Started</string>
    <string name="nzta_white_logo">nzta white logo</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="hi_road_user">Hi, Road User</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="booking">BOOKING</string>
    <string name="hi_instructor">Hi, Instructor</string>
    <string name="practical_test_booking">PRACTICAL TEST BOOKING</string>
    <string name="select_your_preferred_date">Select your preferred date:</string>
    <string name="next_btn">NEXT</string>
</resources>