<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical"
    tools:context=".user.Normal_Login"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:srcCompat="@drawable/colored_logo"
        android:contentDescription="@string/img_desc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_registration_txt"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fn"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="e.g. Austin"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ln"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="e.g. Smith"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dl"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/licence"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="e.g. AB125676"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_lbl"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="e.g. austin_smith@gmail.com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_lbl"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pass_lbl"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:background="@drawable/light_border"
            android:text="@string/register_txt"
            android:textColor="@color/dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@drawable/plain_border"
            android:onClick="normalLogin"
            android:text="@string/cancel_btn"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
