<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical"
    tools:context=".Normal_Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:srcCompat="@drawable/colored_logo"
        android:contentDescription="@string/img_desc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructor_login_txt"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_lbl"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pass_lbl"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/light_border"
            android:text="@string/login_btn"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:layout_marginTop="20dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/plain_border"
            android:text="@string/cancel_btn"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:onClick="normalLogin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="instructorRegister"
            android:text="@string/instructor_register"
            android:textAlignment="center"
            android:textColor="@color/dark"
            android:textSize="15sp"
            android:textStyle="normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_txt"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/plain_border"
                android:text="@string/login_btn"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:onClick="normalLogin"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/plain_border"
                android:text="@string/register_txt"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:onClick="normalRegister"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>