<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image2"
    android:orientation="vertical"
    tools:context=".user.Normal_Login"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/img_desc"
            app:srcCompat="@drawable/white_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructor_registration"
            android:textAlignment="center"
            android:textColor="@color/light"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <EditText
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:drawableLeft="@drawable/icon_person"
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:hint="FIRST NAME"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_margin="10dp"/>


            <EditText
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:drawableLeft="@drawable/icon_person"
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:hint="LAST NAME"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_margin="10dp"/>


            <EditText
                android:id="@+id/licence"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:hint="LICENCE NO."
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:drawableLeft="@drawable/icon_licence"/>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:hint="EMAIL"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:drawableLeft="@drawable/icon_email"/>


            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="textPassword"
                android:hint="PASSWORD"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:drawableLeft="@drawable/icon_password"/>


            <EditText
                android:id="@+id/pass2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="textPassword"
                android:hint="CONFIRM PASSWORD"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:drawableLeft="@drawable/icon_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="10dp">


            <Button
                android:id="@+id/instructRegCanBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/plain_border"
                android:text="@string/cancel_btn"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:onClick="instructorLogin"
                android:layout_weight="2" />

            <Button
                android:id="@+id/instructRegBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/light_border"
                android:text="@string/register_txt"
                android:textColor="@color/dark"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
